gave body height to fix layout shift from page to page

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -452,6 +452,7 @@ select{
 
 body {
     width: 1000px;
+    height: 2000px;
     margin: 0 auto;
     box-sizing: border-box;
 }
